build_logs/selforg_build_2.log
+----------------------------------------------------------------+
|   _     ____ _________       _           _                     | 
|  | |   |  _ \__  /  _ \ ___ | |__   ___ | |_ ___               |
|  | |   | |_) |/ /| |_) / _ \| '_ \ / _ \| __/ __|              |
|  | |___|  __// /_|  _ < (_) | |_) | (_) | |_\__ \              |
|  |_____|_|  /____|_| \_\___/|_.__/ \___/ \__|___/              |
|                                                                |
| lpzRobots simulator, http://robot.informatik.uni-leipzig.de    |
+----------------------------------------------------------------+

Try 'make help' for more...
*************** Configure selforg ***************
/Applications/Xcode-beta.app/Contents/Developer/usr/bin/make MODULE=selforg confsubmodule
call: selforg/configure --prefix=/Users/jerry/lpzrobots --system=MAC --type=USER
gsl-config is /opt/homebrew/bin/gsl-config
configuration done!
call: m4 -D MAC -D USER selforg/simulations/Makefile.4sim.m4
genenete Makefiles in: selforg/simulations/simplesystems/Makefile.conf selforg/simulations/pendulum/Makefile.conf selforg/simulations/manipuexperts/Makefile.conf selforg/simulations/tcpcommunication/Makefile.conf selforg/simulations/dblcontingency_direct/Makefile.conf selforg/simulations/interaction_sims/shadoworreal/Makefile.conf selforg/simulations/interaction_sims/interaction1D/Makefile.conf selforg/simulations/interaction_sims/flocks/Makefile.conf selforg/simulations/interaction_sims/interaction/Makefile.conf selforg/simulations/dblcontingency/Makefile.conf ...Done
call: m4 -D MAC -D USER selforg/examples/Makefile.4sim.m4
genenete Makefiles in: selforg/examples/integration/Makefile.conf selforg/examples/directconnect/Makefile.conf selforg/examples/matrix/Makefile.conf ...Done
*************** Compile selforg *****************
cd selforg && /Applications/Xcode-beta.app/Contents/Developer/usr/bin/make depend
rm Makefile.depend
make Makefile.depend
Makefile:199: Makefile.depend: No such file or directory
for file in ./abstractrobot.h ./agent.h ./trackable.h ./wiredcontroller.h controller/abstractcontroller.h controller/abstractcontrolleradapter.h controller/abstractiafcontroller.h controller/abstractmodel.h controller/abstractmulticontroller.h controller/braitenberg.h controller/classicreinforce.h controller/controllernet.h controller/crossmotorcoupling.h controller/dep.h controller/derbigcontroller.h controller/dercontroller.h controller/derinf.h controller/derlininvert.h controller/derlinunivers.h controller/derpseudosensor.h controller/dinvert3channelcontroller.h controller/discretecontrolleradapter.h controller/discretesizable.h controller/elman.h controller/esn.h controller/feedforwardnn.h controller/ffnncontroller.h controller/homeokinbase.h controller/invert3channelcontroller.h controller/invertablemodel.h controller/invertcontroller.h controller/invertmotorbigmodel.h controller/invertmotorcontroller.h controller/invertmotornstep.h controller/invertmotorspace.h controller/invertnchannelcontroller.h controller/layer.h controller/measureadapter.h controller/modelwithmemoryadapter.h controller/motorbabbler.h controller/multilayerffnn.h controller/multireinforce.h controller/mutualinformationcontroller.h controller/neuralgas.h controller/oneactivemultipassivecontroller.h controller/onecontrollerperchannel.h controller/onelayerffnn.h controller/pimax.h controller/qlearning.h controller/regularisation.h controller/reinforceable.h controller/remotecontrolled.h controller/replaycontroller.h controller/semox.h controller/sinecontroller.h controller/som.h controller/soml.h controller/sos.h controller/sox.h controller/soxexpand.h controller/splitcontrol.h controller/switchcontroller.h controller/teachable.h controller/universalcontroller.h controller/use_java_controller.h wirings/abstractwiring.h wirings/copywiring.h wirings/derivativewiring.h wirings/feedbackwiring.h wirings/forceboostwiring.h wirings/motornoisewiring.h wirings/one2onewiring.h wirings/selectivenoisewiring.h wirings/selectiveone2onewiring.h wirings/wiringsequence.h utils/avrtypes.h utils/backcaller.h utils/backcallervector.h utils/callbackable.h utils/configurable.h utils/configurablelist.h utils/controller_misc.h utils/datafunc.h utils/discretisizer.h utils/globaldatabase.h utils/inspectable.h utils/inspectableproxy.h utils/lyapunov.h utils/mac_drand48r.h utils/mediator.h utils/mediatorcollegue.h utils/modern_randomgenerator.h utils/modern_storeable.h utils/noisegenerator.h utils/parametrizable.h utils/plotoption.h utils/plotoptionengine.h utils/position.h utils/quickmp.h utils/randomgenerator.h utils/ringbuffer.h utils/sensormotorinfo.h utils/stl_adds.h utils/stl_map.h utils/storeable.h utils/trackrobots.h utils/types.h matrix/matrix_neon.h matrix/matrix.h matrix/matrixutils.h matrix/sparsearray.h matrix/sparsematrix.h statistictools/analysationmodes.h statistictools/measuremodes.h statistictools/statistictools.h statistictools/measure/abstractmeasure.h statistictools/measure/complexmeasure.h statistictools/measure/imeasure.h statistictools/measure/statisticmeasure.h statistictools/measure/trackablemeasure.h statistictools/dataanalysation/templatevalueanalysation.h; do \
		ln -sf ../../$file include/selforg/; \
	done
makedepend -- -Wall -pipe -fpic -I./. -I./controller -I./wirings -I./utils -I./matrix -I./statistictools -I./statistictools/measure -I./statistictools/dataanalysation -Iinclude -Iinclude/selforg -std=c++17 -pthread -I/Users/jerry/lpzrobots/include -I/opt/homebrew/Cellar/gsl/2.8/include -DNOCONFIGURATOR -g -O -- ./agent.cpp ./wiredcontroller.cpp controller/abstractcontroller.cpp controller/abstractiafcontroller.cpp controller/abstractmulticontroller.cpp controller/classicreinforce.cpp controller/controllernet.cpp controller/crossmotorcoupling.cpp controller/dep.cpp controller/derbigcontroller.cpp controller/dercontroller.cpp controller/derinf.cpp controller/derlininvert.cpp controller/derlinunivers.cpp controller/derpseudosensor.cpp controller/discretecontrolleradapter.cpp controller/elman.cpp controller/esn.cpp controller/ffnncontroller.cpp controller/invertmotorbigmodel.cpp controller/invertmotornstep.cpp controller/invertmotorspace.cpp controller/invertnchannelcontroller.cpp controller/layer.cpp controller/measureadapter.cpp controller/modelwithmemoryadapter.cpp controller/motorbabbler.cpp controller/multilayerffnn.cpp controller/multireinforce.cpp controller/mutualinformationcontroller.cpp controller/neuralgas.cpp controller/oneactivemultipassivecontroller.cpp controller/onecontrollerperchannel.cpp controller/onelayerffnn.cpp controller/pimax.cpp controller/qlearning.cpp controller/semox.cpp controller/sinecontroller.cpp controller/som.cpp controller/soml.cpp controller/sos.cpp controller/sox.cpp controller/soxexpand.cpp controller/splitcontrol.cpp controller/switchcontroller.cpp controller/universalcontroller.cpp controller/use_java_controller.cpp wirings/abstractwiring.cpp wirings/copywiring.cpp wirings/derivativewiring.cpp wirings/feedbackwiring.cpp wirings/forceboostwiring.cpp wirings/one2onewiring.cpp wirings/selectiveone2onewiring.cpp wirings/wiringsequence.cpp utils/backcaller.cpp utils/configurable.cpp utils/configurablelist.cpp utils/controller_misc.cpp utils/discretisizer.cpp utils/globaldatabase.cpp utils/inspectable.cpp utils/inspectableproxy.cpp utils/lyapunov.cpp utils/mediator.cpp utils/mediatorcollegue.cpp utils/parametrizable.cpp utils/plotoption.cpp utils/plotoptionengine.cpp utils/randomgenerator.cpp utils/stl_adds.cpp utils/storeable.cpp utils/trackrobots.cpp matrix/matrix_neon.cpp matrix/matrix.cpp matrix/matrixutils.cpp statistictools/statistictools.cpp statistictools/measure/complexmeasure.cpp statistictools/measure/statisticmeasure.cpp statistictools/measure/trackablemeasure.cpp statistictools/dataanalysation/templatevalueanalysation.cpp -p'$(BUILD_DIR)/' -f- > Makefile.depend 2>/dev/null
make[2]: `Makefile.depend' is up to date.
cd selforg && /Applications/Xcode-beta.app/Contents/Developer/usr/bin/make
g++ -c -Wall -pipe -fpic -I./. -I./controller -I./wirings -I./utils -I./matrix -I./statistictools -I./statistictools/measure -I./statistictools/dataanalysation -Iinclude -Iinclude/selforg -std=c++17 -pthread -I/Users/jerry/lpzrobots/include -I/opt/homebrew/Cellar/gsl/2.8/include -DNOCONFIGURATOR -g -O  -o "build/./agent.o" "agent.cpp"
In file included from agent.cpp:25:
In file included from ./agent.h:31:
In file included from ./wiredcontroller.h:31:
In file included from ./utils/plotoptionengine.h:31:
In file included from include/selforg/abstractcontroller.h:27:
In file included from include/selforg/configurable.h:31:
include/selforg/backcaller.h:53:11: error: '~BackCaller' marked 'override' but does not override any member functions
   53 |   virtual ~BackCaller() override;
      |           ^
In file included from agent.cpp:25:
In file included from ./agent.h:31:
In file included from ./wiredcontroller.h:31:
./utils/plotoptionengine.h:43:11: error: '~PlotOptionEngine' marked 'override' but does not override any member functions
   43 |   virtual ~PlotOptionEngine() override;
      |           ^
2 errors generated.
make[1]: *** [build/./agent.o] Error 1
make: *** [selforg] Error 2
